--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.853027Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.852496Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.860333Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.859910Z"
+     "iopub.execute_input": "2021-12-06T15:38:59.789115Z",
+     "iopub.status.busy": "2021-12-06T15:38:59.788556Z",
+     "iopub.status.idle": "2021-12-06T15:38:59.797849Z",
+     "shell.execute_reply": "2021-12-06T15:38:59.797314Z"
     }
    },
    "outputs": [],
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.865172Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.864407Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.868108Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.867745Z"
+     "iopub.execute_input": "2021-12-06T15:38:59.803519Z",
+     "iopub.status.busy": "2021-12-06T15:38:59.802235Z",
+     "iopub.status.idle": "2021-12-06T15:38:59.806738Z",
+     "shell.execute_reply": "2021-12-06T15:38:59.806298Z"
     }
    },
    "outputs": [
@@ -102,7 +102,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Écrire une fonction récursive `dessin` tel que `dessin(n)` affiche le dessin ci-dessous, avec `n` lignes.  \n",
     "```\n",
@@ -116,43 +120,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.874084Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.873117Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.875571Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.875212Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****\n",
-      "****\n",
-      "***\n",
-      "**\n",
-      "*\n"
-     ]
-    }
-   ],
-   "source": [
-    "def dessin(n):\n",
-    "    if n == 0:\n",
-    "        return\n",
-    "    for i in range(n):\n",
-    "        print(\"*\", end=\"\")\n",
-    "    print()\n",
-    "    dessin(n-1)\n",
-    "dessin(5)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** (plus difficile) : En utilisant une fonction récursive et avec une méthode similaire, dessiner une figure du genre suivant :\n",
     "```\n",
@@ -168,54 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.879348Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.878941Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.884616Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.884274Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n",
-      "**\n",
-      "***\n",
-      "****\n",
-      "****\n",
-      "***\n",
-      "**\n",
-      "*\n"
-     ]
-    }
-   ],
-   "source": [
-    "def dessin(k, n):\n",
-    "    if n == k:\n",
-    "        return\n",
-    "    for i in range(k):\n",
-    "        print(\"*\", end=\"\")\n",
-    "    print()\n",
-    "\n",
-    "    dessin(k+1, n)\n",
-    "    for i in range(k):\n",
-    "        print(\"*\", end=\"\")\n",
-    "    print()\n",
-    "    \n",
-    "dessin(1, 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,7 +149,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : En utilisant une boucle, écrire une fonction `somme` telle que `somme(n)` renvoie la somme des carrés des entiers de 1 à $n$ (c'est-à-dire $1^2 + 2^2 + 3^2 + ... + n^2$)."
    ]
@@ -241,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.893048Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.891870Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.896891Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.896531Z"
+     "iopub.execute_input": "2021-12-06T15:38:59.817510Z",
+     "iopub.status.busy": "2021-12-06T15:38:59.816978Z",
+     "iopub.status.idle": "2021-12-06T15:38:59.821648Z",
+     "shell.execute_reply": "2021-12-06T15:38:59.821228Z"
     }
    },
    "outputs": [
@@ -257,7 +186,7 @@
        "55"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +211,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** :\n",
     "1. On souhaite calculer $n!$ ($= n\\times (n - 1)\\times ... \\times 2\\times 1$). Exprimer $n!$ en fonction de $(n - 1)!$.  \n",
@@ -300,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:02:34.901156Z",
-     "iopub.status.busy": "2021-12-06T15:02:34.900737Z",
-     "iopub.status.idle": "2021-12-06T15:02:34.903559Z",
-     "shell.execute_reply": "2021-12-06T15:02:34.903203Z"
+     "iopub.execute_input": "2021-12-06T15:38:59.827148Z",
+     "iopub.status.busy": "2021-12-06T15:38:59.826641Z",
+     "iopub.status.idle": "2021-12-06T15:38:59.829930Z",
+     "shell.execute_reply": "2021-12-06T15:38:59.829527Z"
     }
    },
    "outputs": [],
@@ -326,7 +259,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Réécrire `dichotomie` sous forme de fonction récursive. Tester sur des exemples."
    ]
@@ -337,7 +274,7 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -355,5 +292,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
