--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:38:59.789115Z",
-     "iopub.status.busy": "2021-12-06T15:38:59.788556Z",
-     "iopub.status.idle": "2021-12-06T15:38:59.797849Z",
-     "shell.execute_reply": "2021-12-06T15:38:59.797314Z"
+     "iopub.execute_input": "2021-12-07T19:38:03.752614Z",
+     "iopub.status.busy": "2021-12-07T19:38:03.752143Z",
+     "iopub.status.idle": "2021-12-07T19:38:03.760522Z",
+     "shell.execute_reply": "2021-12-07T19:38:03.760091Z"
     }
    },
    "outputs": [],
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:38:59.803519Z",
-     "iopub.status.busy": "2021-12-06T15:38:59.802235Z",
-     "iopub.status.idle": "2021-12-06T15:38:59.806738Z",
-     "shell.execute_reply": "2021-12-06T15:38:59.806298Z"
+     "iopub.execute_input": "2021-12-07T19:38:03.765154Z",
+     "iopub.status.busy": "2021-12-07T19:38:03.764159Z",
+     "iopub.status.idle": "2021-12-07T19:38:03.767850Z",
+     "shell.execute_reply": "2021-12-07T19:38:03.767463Z"
     }
    },
    "outputs": [
@@ -94,10 +94,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Une fonction récursive possède toujours :\n",
-    "> - Un (ou plusieurs) **cas de base** où la fonction renvoie directement une valeur, sans faire d'appel récursif. Sans cas de base, une fonction récursive ne s'arrête jamais (de la même façon qu'un`while` peut faire boucle infinie).  \n",
-    "> - Un **cas général** où la fonction s'appelle récursivement sur un problème plus petit (par exemple pour $n- 1$) pour résoudre le problème (pour $n$).  \n",
-    "> L'écriture d'une fonction récursive ressemble donc beaucoup à une démonstration par récurrence : il faut ramener le problème à un sous-problème que l'on peut résoudre récursivement, et identifier un cas de base."
+    "Une fonction récursive possède toujours :\n",
+    "- Un (ou plusieurs) **cas de base** où la fonction renvoie directement une valeur, sans faire d'appel récursif. Sans cas de base, une fonction récursive ne s'arrête jamais (de la même façon qu'un`while` peut faire boucle infinie).  \n",
+    "- Un **cas général** où la fonction s'appelle récursivement sur un problème plus petit (par exemple pour $n- 1$) pour résoudre le problème (pour $n$).  \n",
+    "L'écriture d'une fonction récursive ressemble donc beaucoup à une démonstration par récurrence : il faut ramener le problème à un sous-problème que l'on peut résoudre récursivement, et identifier un cas de base."
    ]
   },
   {
@@ -173,10 +173,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:38:59.817510Z",
-     "iopub.status.busy": "2021-12-06T15:38:59.816978Z",
-     "iopub.status.idle": "2021-12-06T15:38:59.821648Z",
-     "shell.execute_reply": "2021-12-06T15:38:59.821228Z"
+     "iopub.execute_input": "2021-12-07T19:38:03.777228Z",
+     "iopub.status.busy": "2021-12-07T19:38:03.776777Z",
+     "iopub.status.idle": "2021-12-07T19:38:03.779186Z",
+     "shell.execute_reply": "2021-12-07T19:38:03.779557Z"
     }
    },
    "outputs": [
@@ -236,10 +236,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-06T15:38:59.827148Z",
-     "iopub.status.busy": "2021-12-06T15:38:59.826641Z",
-     "iopub.status.idle": "2021-12-06T15:38:59.829930Z",
-     "shell.execute_reply": "2021-12-06T15:38:59.829527Z"
+     "iopub.execute_input": "2021-12-07T19:38:03.784554Z",
+     "iopub.status.busy": "2021-12-07T19:38:03.783599Z",
+     "iopub.status.idle": "2021-12-07T19:38:03.785052Z",
+     "shell.execute_reply": "2021-12-07T19:38:03.785385Z"
     }
    },
    "outputs": [],
