--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-07T19:38:03.752614Z",
-     "iopub.status.busy": "2021-12-07T19:38:03.752143Z",
-     "iopub.status.idle": "2021-12-07T19:38:03.760522Z",
-     "shell.execute_reply": "2021-12-07T19:38:03.760091Z"
+     "iopub.execute_input": "2021-12-08T09:13:26.060904Z",
+     "iopub.status.busy": "2021-12-08T09:13:26.056229Z",
+     "iopub.status.idle": "2021-12-08T09:13:26.068448Z",
+     "shell.execute_reply": "2021-12-08T09:13:26.067763Z"
     }
    },
    "outputs": [],
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-07T19:38:03.765154Z",
-     "iopub.status.busy": "2021-12-07T19:38:03.764159Z",
-     "iopub.status.idle": "2021-12-07T19:38:03.767850Z",
-     "shell.execute_reply": "2021-12-07T19:38:03.767463Z"
+     "iopub.execute_input": "2021-12-08T09:13:26.075501Z",
+     "iopub.status.busy": "2021-12-08T09:13:26.073898Z",
+     "iopub.status.idle": "2021-12-08T09:13:26.079650Z",
+     "shell.execute_reply": "2021-12-08T09:13:26.079063Z"
     }
    },
    "outputs": [
@@ -78,15 +78,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Qu'affiche le code suivant ? Le deviner puis vérifier.  \n",
     "```python\n",
     "def f(n):  # exemple de fonction récursive\n",
     "    if n == 0:\n",
     "        return\n",
-    "    print(n)\n",
     "    f(n-1)\n",
+    "    print(n)\n",
     "```"
    ]
   },
@@ -173,10 +177,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-07T19:38:03.777228Z",
-     "iopub.status.busy": "2021-12-07T19:38:03.776777Z",
-     "iopub.status.idle": "2021-12-07T19:38:03.779186Z",
-     "shell.execute_reply": "2021-12-07T19:38:03.779557Z"
+     "iopub.execute_input": "2021-12-08T09:13:26.092373Z",
+     "iopub.status.busy": "2021-12-08T09:13:26.091679Z",
+     "iopub.status.idle": "2021-12-08T09:13:26.096093Z",
+     "shell.execute_reply": "2021-12-08T09:13:26.095353Z"
     }
    },
    "outputs": [
@@ -236,10 +240,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-07T19:38:03.784554Z",
-     "iopub.status.busy": "2021-12-07T19:38:03.783599Z",
-     "iopub.status.idle": "2021-12-07T19:38:03.785052Z",
-     "shell.execute_reply": "2021-12-07T19:38:03.785385Z"
+     "iopub.execute_input": "2021-12-08T09:13:26.103178Z",
+     "iopub.status.busy": "2021-12-08T09:13:26.101630Z",
+     "iopub.status.idle": "2021-12-08T09:13:26.103870Z",
+     "shell.execute_reply": "2021-12-08T09:13:26.104454Z"
     }
    },
    "outputs": [],
