Add tutor links

--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T09:13:26.060904Z",
-     "iopub.status.busy": "2021-12-08T09:13:26.056229Z",
-     "iopub.status.idle": "2021-12-08T09:13:26.068448Z",
-     "shell.execute_reply": "2021-12-08T09:13:26.067763Z"
+     "iopub.execute_input": "2021-12-08T10:22:59.237569Z",
+     "iopub.status.busy": "2021-12-08T10:22:59.236329Z",
+     "iopub.status.idle": "2021-12-08T10:22:59.240663Z",
+     "shell.execute_reply": "2021-12-08T10:22:59.240156Z"
     }
    },
    "outputs": [],
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T09:13:26.075501Z",
-     "iopub.status.busy": "2021-12-08T09:13:26.073898Z",
-     "iopub.status.idle": "2021-12-08T09:13:26.079650Z",
-     "shell.execute_reply": "2021-12-08T09:13:26.079063Z"
+     "iopub.execute_input": "2021-12-08T10:22:59.246046Z",
+     "iopub.status.busy": "2021-12-08T10:22:59.244817Z",
+     "iopub.status.idle": "2021-12-08T10:22:59.249232Z",
+     "shell.execute_reply": "2021-12-08T10:22:59.248720Z"
     }
    },
    "outputs": [
@@ -72,7 +72,7 @@
    "source": [
     "Lorsque on appelle `f(5)`, `print(5)` est exécuté (d'où le 5 affiché) puis `f(n - 1)`, qui affiche 4... jusqu'à l'appel de `f(0)` qui s'arrête sans faire d'affichage.  \n",
     "L'exécution de `f(1)` reprend alors, qui s'arrête, qui permet à `f(2)` de reprendre son calcul... jusqu'à `f(5)` qui s'arrête.  \n",
-    "Ci-dessous, vous pouvez tester cet exécution étape par étape avec Python tutor :\n",
+    "Ci-dessous, vous pouvez tester cet exécution étape par étape avec [Python tutor](https://pythontutor.com/iframe-embed.html#code=def%20f%28n%29%3A%20%20%23%20exemple%20de%20fonction%20r%C3%A9cursive%0A%20%20%20%20if%20n%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%0A%20%20%20%20print%28n%29%0A%20%20%20%20f%28n-1%29%0A%20%20%20%20%0Af%285%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false) :\n",
     "<center><iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=def%20f%28n%29%3A%20%20%23%20exemple%20de%20fonction%20r%C3%A9cursive%0A%20%20%20%20if%20n%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%0A%20%20%20%20print%28n%29%0A%20%20%20%20f%28n-1%29%0A%20%20%20%20%0Af%285%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe></center>"
    ]
   },
@@ -177,10 +177,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T09:13:26.092373Z",
-     "iopub.status.busy": "2021-12-08T09:13:26.091679Z",
-     "iopub.status.idle": "2021-12-08T09:13:26.096093Z",
-     "shell.execute_reply": "2021-12-08T09:13:26.095353Z"
+     "iopub.execute_input": "2021-12-08T10:22:59.259447Z",
+     "iopub.status.busy": "2021-12-08T10:22:59.256971Z",
+     "iopub.status.idle": "2021-12-08T10:22:59.262280Z",
+     "shell.execute_reply": "2021-12-08T10:22:59.261857Z"
     }
    },
    "outputs": [
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encore une fois, il peut être utile de visualiser l'exécution avec Python tutor :\n",
+    "Encore une fois, il peut être utile de visualiser l'exécution avec [Python tutor](https://pythontutor.com/iframe-embed.html#code=def%20somme%28n%29%3A%0A%20%20%20%20if%20n%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%200%0A%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20return%20somme%28n%20-%201%29%20%2B%20n**2%0A%0Asomme%285%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false) :\n",
     "<center><iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=def%20somme%28n%29%3A%0A%20%20%20%20if%20n%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%200%0A%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20return%20somme%28n%20-%201%29%20%2B%20n**2%0A%0Asomme%285%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe></center>"
    ]
   },
@@ -240,10 +240,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T09:13:26.103178Z",
-     "iopub.status.busy": "2021-12-08T09:13:26.101630Z",
-     "iopub.status.idle": "2021-12-08T09:13:26.103870Z",
-     "shell.execute_reply": "2021-12-08T09:13:26.104454Z"
+     "iopub.execute_input": "2021-12-08T10:22:59.268333Z",
+     "iopub.status.busy": "2021-12-08T10:22:59.267169Z",
+     "iopub.status.idle": "2021-12-08T10:22:59.268920Z",
+     "shell.execute_reply": "2021-12-08T10:22:59.269326Z"
     }
    },
    "outputs": [],
@@ -269,7 +269,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Réécrire `dichotomie` sous forme de fonction récursive. Tester sur des exemples."
+    "**Exercice** : Réécrire `dichotomie` sous forme de fonction récursive, en mettant`i` et `j` en arguments.  Tester sur des exemples."
    ]
   }
  ],
