--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T14:51:42.627770Z",
-     "iopub.status.busy": "2021-12-12T14:51:42.627326Z",
-     "iopub.status.idle": "2021-12-12T14:51:42.676446Z",
-     "shell.execute_reply": "2021-12-12T14:51:42.676853Z"
+     "iopub.execute_input": "2021-12-12T15:12:06.592101Z",
+     "iopub.status.busy": "2021-12-12T15:12:06.591578Z",
+     "iopub.status.idle": "2021-12-12T15:12:06.640400Z",
+     "shell.execute_reply": "2021-12-12T15:12:06.640815Z"
     }
    },
    "outputs": [
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si la ligne précédente n'a pas fonctionné, vous avez peut-être besoin d'installer matplotlib avec `pip install matplotlib` (si `pip` est installé sur votre ordinateur).  \n",
+    "Si la ligne précédente n'a pas fonctionné, vous avez peut-être besoin d'installer `matplotlib` avec `pip install matplotlib` (si `pip` est installé sur votre ordinateur).  \n",
     "Il faudra ensuite préfixer toutes les fonctions de `matplotlib` par `plt.`.  \n",
     "La fonction la plus importante est `plt.plot`, qui sert à relier des points par des segments de droite. Si `X` est une liste d'abscisses et `Y` une liste d'ordonnées, `plt.plot(X, Y)` relie les points d'abscisses `X` et d'ordonnées `Y`.  \n",
     "Par exemple, pour relier le point $(3, 7)$ au point $(4, 5)$, on va écrire :"
@@ -60,10 +60,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T14:51:42.682274Z",
-     "iopub.status.busy": "2021-12-12T14:51:42.678731Z",
-     "iopub.status.idle": "2021-12-12T14:51:42.684078Z",
-     "shell.execute_reply": "2021-12-12T14:51:42.684415Z"
+     "iopub.execute_input": "2021-12-12T15:12:06.646396Z",
+     "iopub.status.busy": "2021-12-12T15:12:06.644913Z",
+     "iopub.status.idle": "2021-12-12T15:12:06.648467Z",
+     "shell.execute_reply": "2021-12-12T15:12:06.648115Z"
     }
    },
    "outputs": [
@@ -122,10 +122,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T14:51:42.690501Z",
-     "iopub.status.busy": "2021-12-12T14:51:42.688916Z",
-     "iopub.status.idle": "2021-12-12T14:51:42.692583Z",
-     "shell.execute_reply": "2021-12-12T14:51:42.692236Z"
+     "iopub.execute_input": "2021-12-12T15:12:06.654716Z",
+     "iopub.status.busy": "2021-12-12T15:12:06.653128Z",
+     "iopub.status.idle": "2021-12-12T15:12:06.656761Z",
+     "shell.execute_reply": "2021-12-12T15:12:06.656424Z"
     }
    },
    "outputs": [
@@ -246,10 +246,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T14:51:42.695999Z",
-     "iopub.status.busy": "2021-12-12T14:51:42.694483Z",
-     "iopub.status.idle": "2021-12-12T14:51:42.697483Z",
-     "shell.execute_reply": "2021-12-12T14:51:42.697790Z"
+     "iopub.execute_input": "2021-12-12T15:12:06.660206Z",
+     "iopub.status.busy": "2021-12-12T15:12:06.658686Z",
+     "iopub.status.idle": "2021-12-12T15:12:06.662035Z",
+     "shell.execute_reply": "2021-12-12T15:12:06.661657Z"
     }
    },
    "outputs": [],
