--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:03.611218Z",
-     "iopub.status.busy": "2021-12-12T15:47:03.610366Z",
-     "iopub.status.idle": "2021-12-12T15:47:06.437634Z",
-     "shell.execute_reply": "2021-12-12T15:47:06.437059Z"
+     "iopub.execute_input": "2021-12-12T15:56:04.968062Z",
+     "iopub.status.busy": "2021-12-12T15:56:04.967513Z",
+     "iopub.status.idle": "2021-12-12T15:56:07.784285Z",
+     "shell.execute_reply": "2021-12-12T15:56:07.783608Z"
     }
    },
    "outputs": [],
@@ -48,10 +48,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:06.453485Z",
-     "iopub.status.busy": "2021-12-12T15:47:06.442213Z",
-     "iopub.status.idle": "2021-12-12T15:47:06.557143Z",
-     "shell.execute_reply": "2021-12-12T15:47:06.557811Z"
+     "iopub.execute_input": "2021-12-12T15:56:07.800564Z",
+     "iopub.status.busy": "2021-12-12T15:56:07.800058Z",
+     "iopub.status.idle": "2021-12-12T15:56:07.905552Z",
+     "shell.execute_reply": "2021-12-12T15:56:07.906127Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:06.561060Z",
-     "iopub.status.busy": "2021-12-12T15:47:06.560128Z",
-     "iopub.status.idle": "2021-12-12T15:47:06.802496Z",
-     "shell.execute_reply": "2021-12-12T15:47:06.802893Z"
+     "iopub.execute_input": "2021-12-12T15:56:07.922793Z",
+     "iopub.status.busy": "2021-12-12T15:56:07.922343Z",
+     "iopub.status.idle": "2021-12-12T15:56:08.190325Z",
+     "shell.execute_reply": "2021-12-12T15:56:08.189877Z"
     },
     "tags": [
      "hide"
@@ -165,10 +165,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:06.850424Z",
-     "iopub.status.busy": "2021-12-12T15:47:06.849917Z",
-     "iopub.status.idle": "2021-12-12T15:47:06.930294Z",
-     "shell.execute_reply": "2021-12-12T15:47:06.930959Z"
+     "iopub.execute_input": "2021-12-12T15:56:08.199068Z",
+     "iopub.status.busy": "2021-12-12T15:56:08.195202Z",
+     "iopub.status.idle": "2021-12-12T15:56:08.283762Z",
+     "shell.execute_reply": "2021-12-12T15:56:08.284131Z"
     }
    },
    "outputs": [
@@ -210,7 +210,7 @@
    "metadata": {},
    "source": [
     "## Rotation\n",
-    "<center><img src=https://github.com/fortierq/tikz/blob/master/geometry/basis/change_basis.png?raw=true width=200></center>"
+    "<center><img src=https://github.com/fortierq/tikz/blob/master/geometry/basis/change_basis.png?raw=true width=250></center>"
    ]
   },
   {
@@ -258,10 +258,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:06.934642Z",
-     "iopub.status.busy": "2021-12-12T15:47:06.933708Z",
-     "iopub.status.idle": "2021-12-12T15:47:07.212088Z",
-     "shell.execute_reply": "2021-12-12T15:47:07.211298Z"
+     "iopub.execute_input": "2021-12-12T15:56:08.299607Z",
+     "iopub.status.busy": "2021-12-12T15:56:08.297620Z",
+     "iopub.status.idle": "2021-12-12T15:56:08.566142Z",
+     "shell.execute_reply": "2021-12-12T15:56:08.565686Z"
     },
     "tags": [
      "hide"
@@ -320,10 +320,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:07.217039Z",
-     "iopub.status.busy": "2021-12-12T15:47:07.214304Z",
-     "iopub.status.idle": "2021-12-12T15:47:07.375567Z",
-     "shell.execute_reply": "2021-12-12T15:47:07.375162Z"
+     "iopub.execute_input": "2021-12-12T15:56:08.582602Z",
+     "iopub.status.busy": "2021-12-12T15:56:08.581790Z",
+     "iopub.status.idle": "2021-12-12T15:56:08.731856Z",
+     "shell.execute_reply": "2021-12-12T15:56:08.732229Z"
     },
     "tags": [
      "hide"
@@ -379,10 +379,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:07.380488Z",
-     "iopub.status.busy": "2021-12-12T15:47:07.377578Z",
-     "iopub.status.idle": "2021-12-12T15:47:07.553640Z",
-     "shell.execute_reply": "2021-12-12T15:47:07.554308Z"
+     "iopub.execute_input": "2021-12-12T15:56:08.747549Z",
+     "iopub.status.busy": "2021-12-12T15:56:08.747123Z",
+     "iopub.status.idle": "2021-12-12T15:56:08.911766Z",
+     "shell.execute_reply": "2021-12-12T15:56:08.912384Z"
     },
     "tags": [
      "hide"
@@ -429,10 +429,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:07.561022Z",
-     "iopub.status.busy": "2021-12-12T15:47:07.559139Z",
-     "iopub.status.idle": "2021-12-12T15:47:07.907234Z",
-     "shell.execute_reply": "2021-12-12T15:47:07.907568Z"
+     "iopub.execute_input": "2021-12-12T15:56:08.919672Z",
+     "iopub.status.busy": "2021-12-12T15:56:08.919243Z",
+     "iopub.status.idle": "2021-12-12T15:56:09.260596Z",
+     "shell.execute_reply": "2021-12-12T15:56:09.260101Z"
     },
     "tags": [
      "hide"
@@ -476,7 +476,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction récursive `arbre` telle que `arbre(r, d, a, n)` dessine un arbre dont le tronc commence au point `r`, est de longueur `d` et avec un angle `a` dans le sens trigonométrique (par rapport à l'axe des abscisses). Les deux sous-arbre Cette fonction devra donc afficher le tronc puis s'appeller récursivement pour afficher deux sous-arbres plus petits, par exemple dont les longueurs sont divisées par `1.2` et les angles augmentés ou diminués de `np.pi/6`. `n` est le nombre d'appels récursifs : on le diminuera à chaque appel récursif et on s'arrêtera lorsque il vaut 0 (c'est le cas de base).  \n",
+    "**Exercice** : Écrire une fonction récursive `arbre` telle que `arbre(r, d, a, n)` dessine un arbre dont le tronc commence au point `r`, est de longueur `d` et avec un angle `a` dans le sens trigonométrique (par rapport à l'axe des abscisses).  \n",
+    "Cette fonction devra donc afficher le tronc puis s'appeller récursivement pour afficher deux sous-arbres plus petits, par exemple dont les longueurs sont divisées par `1.2` et les angles augmentés ou diminués de `np.pi/6`. `n` est le nombre d'appels récursifs : on le diminuera à chaque appel récursif et on s'arrêtera lorsque il vaut 0 (c'est le cas de base).  \n",
     "On pourra réutiliser `segment`, `rotation` et compléter la fonction suivante :"
    ]
   },
@@ -485,10 +486,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:47:07.912387Z",
-     "iopub.status.busy": "2021-12-12T15:47:07.911434Z",
-     "iopub.status.idle": "2021-12-12T15:47:07.914382Z",
-     "shell.execute_reply": "2021-12-12T15:47:07.913929Z"
+     "iopub.execute_input": "2021-12-12T15:56:09.265472Z",
+     "iopub.status.busy": "2021-12-12T15:56:09.264482Z",
+     "iopub.status.idle": "2021-12-12T15:56:09.265973Z",
+     "shell.execute_reply": "2021-12-12T15:56:09.266315Z"
     }
    },
    "outputs": [],
