--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TP 6 : dessin de fractales (avec récursivité)"
+    "# TP 6 : Dessin de fractales (avec récursivité)"
    ]
   },
   {
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:04.968062Z",
-     "iopub.status.busy": "2021-12-12T15:56:04.967513Z",
-     "iopub.status.idle": "2021-12-12T15:56:07.784285Z",
-     "shell.execute_reply": "2021-12-12T15:56:07.783608Z"
+     "iopub.execute_input": "2021-12-12T15:56:51.886809Z",
+     "iopub.status.busy": "2021-12-12T15:56:51.886151Z",
+     "iopub.status.idle": "2021-12-12T15:56:55.022269Z",
+     "shell.execute_reply": "2021-12-12T15:56:55.022672Z"
     }
    },
    "outputs": [],
@@ -48,10 +48,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:07.800564Z",
-     "iopub.status.busy": "2021-12-12T15:56:07.800058Z",
-     "iopub.status.idle": "2021-12-12T15:56:07.905552Z",
-     "shell.execute_reply": "2021-12-12T15:56:07.906127Z"
+     "iopub.execute_input": "2021-12-12T15:56:55.043101Z",
+     "iopub.status.busy": "2021-12-12T15:56:55.027292Z",
+     "iopub.status.idle": "2021-12-12T15:56:55.199874Z",
+     "shell.execute_reply": "2021-12-12T15:56:55.199392Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:07.922793Z",
-     "iopub.status.busy": "2021-12-12T15:56:07.922343Z",
-     "iopub.status.idle": "2021-12-12T15:56:08.190325Z",
-     "shell.execute_reply": "2021-12-12T15:56:08.189877Z"
+     "iopub.execute_input": "2021-12-12T15:56:55.209753Z",
+     "iopub.status.busy": "2021-12-12T15:56:55.209197Z",
+     "iopub.status.idle": "2021-12-12T15:56:55.517756Z",
+     "shell.execute_reply": "2021-12-12T15:56:55.517284Z"
     },
     "tags": [
      "hide"
@@ -165,10 +165,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:08.199068Z",
-     "iopub.status.busy": "2021-12-12T15:56:08.195202Z",
-     "iopub.status.idle": "2021-12-12T15:56:08.283762Z",
-     "shell.execute_reply": "2021-12-12T15:56:08.284131Z"
+     "iopub.execute_input": "2021-12-12T15:56:55.553461Z",
+     "iopub.status.busy": "2021-12-12T15:56:55.546949Z",
+     "iopub.status.idle": "2021-12-12T15:56:55.662825Z",
+     "shell.execute_reply": "2021-12-12T15:56:55.664684Z"
     }
    },
    "outputs": [
@@ -258,10 +258,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:08.299607Z",
-     "iopub.status.busy": "2021-12-12T15:56:08.297620Z",
-     "iopub.status.idle": "2021-12-12T15:56:08.566142Z",
-     "shell.execute_reply": "2021-12-12T15:56:08.565686Z"
+     "iopub.execute_input": "2021-12-12T15:56:55.701998Z",
+     "iopub.status.busy": "2021-12-12T15:56:55.696325Z",
+     "iopub.status.idle": "2021-12-12T15:56:56.069647Z",
+     "shell.execute_reply": "2021-12-12T15:56:56.069244Z"
     },
     "tags": [
      "hide"
@@ -320,10 +320,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:08.582602Z",
-     "iopub.status.busy": "2021-12-12T15:56:08.581790Z",
-     "iopub.status.idle": "2021-12-12T15:56:08.731856Z",
-     "shell.execute_reply": "2021-12-12T15:56:08.732229Z"
+     "iopub.execute_input": "2021-12-12T15:56:56.087897Z",
+     "iopub.status.busy": "2021-12-12T15:56:56.087431Z",
+     "iopub.status.idle": "2021-12-12T15:56:56.262447Z",
+     "shell.execute_reply": "2021-12-12T15:56:56.262830Z"
     },
     "tags": [
      "hide"
@@ -379,10 +379,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:08.747549Z",
-     "iopub.status.busy": "2021-12-12T15:56:08.747123Z",
-     "iopub.status.idle": "2021-12-12T15:56:08.911766Z",
-     "shell.execute_reply": "2021-12-12T15:56:08.912384Z"
+     "iopub.execute_input": "2021-12-12T15:56:56.308917Z",
+     "iopub.status.busy": "2021-12-12T15:56:56.302317Z",
+     "iopub.status.idle": "2021-12-12T15:56:56.529887Z",
+     "shell.execute_reply": "2021-12-12T15:56:56.529424Z"
     },
     "tags": [
      "hide"
@@ -429,10 +429,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:08.919672Z",
-     "iopub.status.busy": "2021-12-12T15:56:08.919243Z",
-     "iopub.status.idle": "2021-12-12T15:56:09.260596Z",
-     "shell.execute_reply": "2021-12-12T15:56:09.260101Z"
+     "iopub.execute_input": "2021-12-12T15:56:56.540371Z",
+     "iopub.status.busy": "2021-12-12T15:56:56.539868Z",
+     "iopub.status.idle": "2021-12-12T15:56:57.005298Z",
+     "shell.execute_reply": "2021-12-12T15:56:57.005685Z"
     },
     "tags": [
      "hide"
@@ -486,10 +486,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T15:56:09.265472Z",
-     "iopub.status.busy": "2021-12-12T15:56:09.264482Z",
-     "iopub.status.idle": "2021-12-12T15:56:09.265973Z",
-     "shell.execute_reply": "2021-12-12T15:56:09.266315Z"
+     "iopub.execute_input": "2021-12-12T15:56:57.011614Z",
+     "iopub.status.busy": "2021-12-12T15:56:57.011001Z",
+     "iopub.status.idle": "2021-12-12T15:56:57.013462Z",
+     "shell.execute_reply": "2021-12-12T15:56:57.014239Z"
     }
    },
    "outputs": [],
